--- a/Artefakte/RapidPrototypes/React-three-js/src/index.css
+++ b/Artefakte/RapidPrototypes/React-three-js/src/index.css
@@ -11,3 +11,125 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#root {
+  overflow: hidden;
+}
+
+.main {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: white;
+  pointer-events: none;
+}
+
+
+/*  */
+
+.canvas-container {
+  height: unset;
+  flex: 1 0 0px;
+  margin-bottom: -100px;
+}
+.canvas-container::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  height: 100px;
+  width: 100%;
+  background: linear-gradient(0deg, black, transparent);
+}
+
+.main {
+  position: relative;
+  flex: 0 0 auto;
+  height: auto;
+}
+
+.main > div {
+  position: relative;
+  height: auto;
+}
+
+
+@media only screen and (max-width: 500px) {
+.canvas-container {
+  margin-bottom: -40px;
+}
+.canvas-container::after {
+  display: none;
+}
+}
+
+.bg {
+background-image: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/DWLR-bg.jpg');
+}
+
+.stars {
+background-image: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/OiNX-stars.png');
+}
+
+.ground {
+background-image: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/xyC5-ground.png');
+}
+
+.main > .code {
+position: absolute;
+right: 10vw;
+margin-right: -60px;
+width: 640px;
+max-width: 80%;
+height: 100%;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.code-container {
+position: relative;
+margin-bottom: -60px;
+}
+
+.counter {
+position: absolute;
+top: -800px;
+right: -20px;
+color: white;
+background: #394a52;
+padding: 40px;
+border-radius: 10px;
+box-shadow: 0 16px 40px -5px rgba(0, 0, 0, 0.5);
+width: 120px;
+height: 120px;
+font-size: 3em;
+z-index: 20000;
+pointer-events: all;
+}
+
+.counter > span {
+position: absolute;
+left: 50%;
+top: 50%;
+margin-top: -10px;
+transform: translate3d(-50%, -50%, 0);
+}
+
+.counter > button {
+margin: 10px;
+padding: 5px 10px;
+position: absolute;
+left: 0;
+bottom: 0;
+width: 100px;
+border-radius: 5px;
+border: solid 2px white;
+outline: none;
+background: transparent;
+color: white;
+cursor: pointer;
+}
