Eingabe von Start und Ziel mit Popup und Buttons

--- a/Artefakte/RapidPrototypes/React-three-js/src/index.css
+++ b/Artefakte/RapidPrototypes/React-three-js/src/index.css
@@ -90,35 +90,42 @@ cursor: pointer;
 }
 
 
-.addNewPointRandom{
-  position: absolute;
-top: -55vh;
-right: -3vw;
-color: white;
-background: #23698a;
+.WegButtonPopup{
+position: absolute;
+top: -93vh;
+left: 45vw;
+transform: translate(-50%, -50%);
+color: #C60C0F;
+background: #8C8C8C;
 padding: 30px;
-border-radius: 10px;
+border: 10px;
 box-shadow: 0 16px 40px -5px rgba(0, 0, 0, 0.5);
-width: 120px;
-height: 60px;
-font-size: 3em;
+width: 400px;
+height: 150px;
+font-size: 1em;
 z-index: 20000;
 pointer-events: all;
 }
 
-.addNewPointRandom > button {
-  margin: 10px;
-  padding: 5px 10px;
+
+.WegButton {
   position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100px;
-  border-radius: 5px;
-  border: solid 2px white;
-  outline: none;
-  background: transparent;
-  color: white;
-  cursor: pointer;
+  top: -90vh;
+  right: 91vw;
+  color: #EA5B0C;
+  background: white;
+  padding: 10px;
+  border-radius: 10px;
+  width: 120px;
+  height: 60px;
+  font-size: 16px;
+  z-index: 20000;
+  pointer-events: all;
+  }
+
+  .formMitPadding {
+    padding-top: 5px;
+    padding-bottom: 10px;
   }
 
 .main2 {
