--- a/Artefakte/RapidPrototypes/React-three-js/src/index.css
+++ b/Artefakte/RapidPrototypes/React-three-js/src/index.css
@@ -96,13 +96,14 @@ top: -93vh;
 left: 45vw;
 transform: translate(-50%, -50%);
 color: #C60C0F;
-background: #8C8C8C;
+background: #E8E8E8;
 padding: 30px;
+border-radius: 5px;
 border: 10px;
 box-shadow: 0 16px 40px -5px rgba(0, 0, 0, 0.5);
-width: 400px;
-height: 150px;
-font-size: 1em;
+width: 420px;
+height: 170px;
+font-size: 1.2em;
 z-index: 20000;
 pointer-events: all;
 }
@@ -113,9 +114,9 @@ pointer-events: all;
   top: -90vh;
   right: 91vw;
   color: #EA5B0C;
-  background: white;
+  background: #E8E8E8;
   padding: 10px;
-  border-radius: 10px;
+  border-radius: 5px;
   width: 120px;
   height: 60px;
   font-size: 16px;
