--- a/Artefakte/RapidPrototypes/React-three-js/src/index.css
+++ b/Artefakte/RapidPrototypes/React-three-js/src/index.css
@@ -121,12 +121,12 @@ pointer-events: all;
   font-size: 16px;
   z-index: 20000;
   pointer-events: all;
-  }
+}
 
-  .formMitPadding {
-    padding-top: 5px;
-    padding-bottom: 10px;
-  }
+.formMitPadding {
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
 
 .main2 {
   position: absolute;
@@ -137,8 +137,6 @@ pointer-events: all;
   color: white;
   pointer-events: none;
 }
-
-/*  */
 
 .main2 {
   position: relative;
@@ -155,4 +153,40 @@ pointer-events: all;
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+
+
+.addNewPointRandom{
+  position: absolute;
+  top: -40vh;
+  right: -3vw;
+  color: white;
+  background: #23698a;
+  padding: 30px;
+  border-radius: 10px;
+  border: 10px;
+  box-shadow: 0 16px 40px -5px rgba(0, 0, 0, 0.5);
+  width: 120px;
+  height: 60px;
+  font-size: 3em;
+  width: 400px;
+  height: 150px;
+  font-size: 1em;
+  z-index: 20000;
+  pointer-events: all;
+}
+
+.addNewPointRandom > button {
+  margin: 10px;
+  padding: 5px 10px;
+  left: 0;
+  bottom: 0;
+  width: 100px;
+  border-radius: 5px;
+  border: solid 2px white;
+  outline: none;
+  background: transparent;
+  color: white;
+  cursor: pointer;
 }
