--- a/Artefakte/FunktionalerPrototyp/src/index.css
+++ b/Artefakte/FunktionalerPrototyp/src/index.css
@@ -50,7 +50,7 @@ code {
 }
 
 
-.counter {
+.SwitchCam {
 position: absolute;
 top: -95vh;
 right: -3vw;
@@ -66,7 +66,7 @@ z-index: 20000;
 pointer-events: all;
 }
 
-.counter > span {
+.SwitchCam > span {
 position: absolute;
 left: 50%;
 top: 50%;
@@ -74,7 +74,7 @@ margin-top: -30px;
 transform: translate3d(-50%, -50%, 0);
 }
 
-.counter > button {
+.SwitchCam > button {
 margin: 10px;
 padding: 5px 10px;
 position: absolute;
@@ -108,7 +108,6 @@ z-index: 20000;
 pointer-events: all;
 }
 
-
 .WegButton {
   position: absolute;
   top: -90vh;
@@ -130,9 +129,9 @@ pointer-events: all;
   }
 
   /*Button von Domenic*/ 
-  .addNewPointRandom{
+  .uiRoute{
     position: absolute;
-    top: -40vh;
+    top: -95vh;
     right: -3vw;
     color: white;
     background: #23698a;
@@ -150,7 +149,7 @@ pointer-events: all;
     pointer-events: all;
   }
   
-  .addNewPointRandom > button {
+  .uiRoute> button {
     margin: 10px;
     padding: 5px 10px;
     left: 0;
@@ -164,22 +163,42 @@ pointer-events: all;
     cursor: pointer;
   }
 
+  .treppeAufzug {
+    margin: 10px;
+    padding: 5px 10px;
+    left: 0;
+    bottom: 0;
+    width: 100px;
+    border-radius: 5px;
+    border: solid 2px white;
+    outline: none;
+    background: transparent;
+    color: white;
+    cursor: pointer;
+  }
+
+  .berechnenButton > button{
+    margin: 10px;
+    padding: 5px 10px;
+    left: 0;
+    bottom: 0;
+    width: 100px;
+    border-radius: 5px;
+    outline: none;
+    background: #000;
+    color: white;
+    cursor: pointer;
+  }
+
+
 .main2 {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   color: white;
   pointer-events: none;
-}
-
-/*  */
-
-.main2 {
-  position: relative;
-  flex: 0 0 auto;
-  height: auto;
 }
 
 .main2 > div {
