--- a/Artefakte/FunktionalerPrototyp/src/index.css
+++ b/Artefakte/FunktionalerPrototyp/src/index.css
@@ -17,26 +17,13 @@ code {
 }
 
 .main {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   color: white;
   pointer-events: none;
-}
-
-/*  */
-
-.main {
-  position: relative;
-  flex: 0 0 auto;
-  height: auto;
-}
-
-.main > div {
-  position: relative;
-  height: auto;
 }
 
 
@@ -51,27 +38,17 @@ code {
 
 
 .SwitchCam {
-position: absolute;
-top: -95vh;
-right: -3vw;
-color: white;
-background: #23698a;
+position: relative;
+top: 8vh;
+right: -90vw;
+background: #AAAAAA;
 padding: 30px;
 border-radius: 10px;
-box-shadow: 0 16px 40px -5px rgba(0, 0, 0, 0.5);
 width: 120px;
-height: 60px;
+height: 50px;
 font-size: 3em;
 z-index: 20000;
 pointer-events: all;
-}
-
-.SwitchCam > span {
-position: absolute;
-left: 50%;
-top: 50%;
-margin-top: -30px;
-transform: translate3d(-50%, -50%, 0);
 }
 
 .SwitchCam > button {
@@ -84,8 +61,8 @@ width: 100px;
 border-radius: 5px;
 border: solid 2px white;
 outline: none;
-background: transparent;
-color: white;
+background: #AAAAAA;
+color: Black;
 cursor: pointer;
 }
 
@@ -134,7 +111,7 @@ pointer-events: all;
     top: -95vh;
     right: -3vw;
     color: white;
-    background: #23698a;
+    background: #E8E8E8;
     padding: 30px;
     border-radius: 10px;
     border: 10px;
@@ -178,7 +155,7 @@ pointer-events: all;
     cursor: pointer;
   }
 
-  .berechnenButton > button{
+  .berechnenButton{
     margin: 10px;
     padding: 5px 10px;
     left: 0;
@@ -186,11 +163,10 @@ pointer-events: all;
     width: 100px;
     border-radius: 5px;
     outline: none;
-    background: #000;
+    background: #000000 !important;
     color: white;
     cursor: pointer;
   }
-
 
 .main2 {
   position: relative;
